Completed first section

--- a/index.html
+++ b/index.html
@@ -5,20 +5,93 @@
 </head>
 <body>
     <header>
-        <nav>
+        <nav class="main">
             <div class="logo">
                 <a href="/" target="_self">
                     <img class="logo-image" src="./resources/images/ic-logo.svg" />
-                    <h1>Colmar<span >Academy</span></h1>
+                    <h1>Colmar<span>Academy</span></h1>
                 </a>
             </div>
             <div class="links">
-                <a href="#" target="_self">On campus</a>
-                <a href="#" target="_self">Online</a>
-                <a href="#" target="_self">Our Companies</a>
-                <a href="#" target="_self">Sign In</a>
+                <a href="#" target="_self"><span>On campus</span></a>
+                <a href="#" target="_self"><span>Online</span></a>
+                <a href="#" target="_self"><span>Our Companies</span></a>
+                <a href="#" target="_self"><span>Sign In</span></a>
             </div>
         </nav>
+        <nav class="mobile">
+            <a href="/" target="_self">
+                <img class="logo-image" src="./resources/images/ic-logo.svg" />
+            </a>
+            <a href="#" target="_self">
+                <img class="icon" src="./resources/images/ic-on-campus.svg" alt="On campus logo" />
+            </a>
+            <a href="#" target="_self">
+                <img class="icon" src="./resources/images/ic-online.svg" alt="On campus logo" />
+            </a>
+            <a href="#" target="_self">
+                <img class="icon" src="./resources/images/ic-login.svg" alt="Sign in img" />
+            </a>
+        </nav>
     </header>
+    <div class="container">
+        <section class="jumbotron">
+            <div class="content-media">
+                <figure class="figure-image">
+                    <div class="section-image">
+                        <img class="resource-image" src="./resources/images/banner.jpg" />
+                    </div>
+                </figure>
+            </div>
+            <div class="content-text">
+                <div class="section-header">
+                    <h1 class="section-title">
+                        Learn something new everyday
+                    </h1>
+                    <h2 class="section-subtitle">
+                        Lorem ipsum dolor sit amet, consectetur adispcing elit.
+                    </h2>
+                    <button>Start here</button>
+                </div>
+            </div>
+
+        </section>
+
+        <section class="jumbotron white">
+            <div class="content-media">
+                <figure class="figure-image">
+                    <div class="section-image">
+                        <img class="resource-image" src="./resources/images/information-main.jpg" />
+                    </div>
+                </figure>
+                <div class="section-header">
+                    <h1 class="section-title">
+                        Learn something new everyday
+                    </h1>
+                    <p>
+                        Via pithily stopped one this until rode salmon incompetent much bawled gosh experimentally considering much the however armadillo jeez or ouch the one when wow some tonelessly jeez gull while grizzly like burst cardinal athletically.
+                    </p>
+                    <p>
+                        <strong>
+                            Emanuel, Sr Strategist at Hiring.com
+                        </strong>
+                    </p>
+                </div>
+
+            </div>
+            <div class="content-text">
+                <div class="section-header">
+                    <h1 class="section-title">
+                        Learn something new everyday
+                    </h1>
+                    <h2 class="section-subtitle">
+                        Lorem ipsum dolor sit amet, consectetur adispcing elit.
+                    </h2>
+                    <button>Start here</button>
+                </div>
+            </div>
+
+        </section>
+    </div>
 </body>
 </html>
