--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
                     </h1>
                     <p>
                         Via pithily stopped one this until rode salmon incompetent much bawled gosh experimentally considering much the however armadillo jeez or ouch the one when wow some tonelessly jeez gull while grizzly like burst cardinal athletically.
+
+                    </p>
+                    <p>
+                        &nbsp;
+                    </p>
+                    <p>
+                        &nbsp;
                     </p>
                     <p>
                         <strong>
@@ -79,18 +86,115 @@
                 </div>
 
             </div>
-            <div class="content-text">
-                <div class="section-header">
-                    <h1 class="section-title">
-                        Learn something new everyday
-                    </h1>
-                    <h2 class="section-subtitle">
-                        Lorem ipsum dolor sit amet, consectetur adispcing elit.
-                    </h2>
-                    <button>Start here</button>
+            <div class="content-text cards">
+                <div class="card">
+                    <figure id="card1" class="card-image">
+                        <!--<img src="./resources/images/information-orientation.jpg" alt="Information Orientation" />-->
+                    </figure>
+                    <div class="card-info">
+                        <div class="card-header">
+                            <h2>Orientation date</h2>
+                            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                        </div>
+                        <a class="read-more" href="#">Read more</a>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <figure id="card2"  class="card-image">
+                        <!--<img src="./resources/images/information-campus-mobile.jpg" alt="Information Campus Mobile" />-->
+                    </figure>
+                    <div class="card-info">
+                        <div class="card-header">
+                            <h2>Orientation date</h2>
+                            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                        </div>
+                        <a class="read-more" href="#">Read more</a>
+                    </div>
+
+                </div>
+                <div class="card selected">
+                    <figure id="card3" class="card-image">
+                        <!--<img src="./resources/images/information-guest-lecture.jpg" alt="Information Guest Lecturer" />-->
+                    </figure>
+                    <div class="card-info">
+                        <div class="card-header">
+                            <h2>Orientation date</h2>
+                            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                        </div>
+                        <a class="read-more" href="#">Read more</a>
+                    </div>
+
                 </div>
             </div>
 
+        </section>
+        <section class="landing-page">
+            <div class="section-header">
+                <h1 class="siction-title">Start learning</h1>
+            </div>
+            <div class="landing-wrap">
+                <div class="one-third">
+                    <figure class="feature-image">
+                        <img />
+                    </figure>
+                    <div class="feature-info">
+                        <h2>Software engineering</h2>
+                        <h3>Courses</h3>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="one-third">
+                    <figure class="feature-image">
+                        <img />
+                    </figure>
+                    <div class="feature-info">
+                        <h2>Software engineering</h2>
+                        <h3>Courses</h3>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="one-third">
+                    <figure class="feature-image">
+                        <img />
+                    </figure>
+                    <div class="feature-info">
+                        <h2>Software engineering</h2>
+                        <h3>Courses</h3>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="one-third">
+                    <figure class="feature-image">
+                        <img />
+                    </figure>
+                    <div class="feature-info">
+                        <h2>Software engineering</h2>
+                        <h3>Courses</h3>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="one-third">
+                    <figure class="feature-image">
+                        <img />
+                    </figure>
+                    <div class="feature-info">
+                        <h2>Software engineering</h2>
+                        <h3>Courses</h3>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="one-third">
+                    <figure class="feature-image">
+                        <img />
+                    </figure>
+                    <div class="feature-info">
+                        <h2>Software engineering</h2>
+                        <h3>Courses</h3>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 </body>
