--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
+    <link rel="stylesheet" type="text/css" href="resources/css/reset.css" />
     <link rel="stylesheet" type="text/css" href="resources/css/styles.css" />
+
 </head>
 <body>
     <header>
@@ -106,8 +108,8 @@
                     </figure>
                     <div class="card-info">
                         <div class="card-header">
-                            <h2>Orientation date</h2>
-                            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                            <h2>Our campus</h2>
+                            <p>Find which campus is close by you</p>
                         </div>
                         <a class="read-more" href="#">Read more</a>
                     </div>
@@ -119,8 +121,8 @@
                     </figure>
                     <div class="card-info">
                         <div class="card-header">
-                            <h2>Orientation date</h2>
-                            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                            <h2>Our Guest lecture</h2>
+                            <p>Join a keynote with Oliver Sack About music in medical treatment</p>
                         </div>
                         <a class="read-more" href="#">Read more</a>
                     </div>
@@ -129,14 +131,15 @@
             </div>
 
         </section>
+        
         <section class="landing-page">
             <div class="section-header">
-                <h1 class="siction-title">Start learning</h1>
+                <h1 class="section-title">Start learning</h1>
             </div>
             <div class="landing-wrap">
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img />
+                        <img src="./resources/images/course-software.jpg" alt="Sofware Engineering"/>
                     </figure>
                     <div class="feature-info">
                         <h2>Software engineering</h2>
@@ -146,56 +149,130 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img />
+                        <img  src="./resources/images/course-computer-art.jpg" alt="Computer Art"/>
                     </figure>
                     <div class="feature-info">
-                        <h2>Software engineering</h2>
+                        <h2>Computer art</h2>
                         <h3>Courses</h3>
-                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                        <p>Imaging &amp; Design, Web Design, Motion Graphics &amp; Visual Effects, Computer Animation</p>
                     </div>
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img />
+                        <img src="./resources/images/course-design.jpg" alt="Design"/>
                     </figure>
                     <div class="feature-info">
-                        <h2>Software engineering</h2>
+                        <h2>Design</h2>
                         <h3>Courses</h3>
-                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                        <p>User Experience Design, User Research, Visual Design</p>
                     </div>
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img />
+                        <img  src="./resources/images/course-data.jpg" alt="Data"/>
                     </figure>
                     <div class="feature-info">
-                        <h2>Software engineering</h2>
+                        <h2>Data</h2>
                         <h3>Courses</h3>
-                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                        <p>Data Science, Big Data, SQL, Data Visualization</p>
                     </div>
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img />
+                        <img  src="./resources/images/course-business.jpg" alt="Business Courses"/>
                     </figure>
                     <div class="feature-info">
-                        <h2>Software engineering</h2>
+                        <h2>Business</h2>
                         <h3>Courses</h3>
-                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                        <p>Product Development, Business Development, Startup</p>
                     </div>
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img />
+                        <img  src="./resources/images/course-marketing.jpg" alt="Marketing Courses"/>
                     </figure>
                     <div class="feature-info">
-                        <h2>Software engineering</h2>
+                        <h2>Marketing</h2>
                         <h3>Courses</h3>
-                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                        <p>Analytics, Content Marketing, Mobile Marketing</p>
                     </div>
                 </div>
             </div>
         </section>
+
+        <section class="jumbotron white">
+            <div class="content-media">
+                <figure class="figure-image">
+                    <div class="section-image">
+                        <img class="resource-image" src="./resources/images/information-main.jpg" />
+                    </div>
+                </figure>
+                <div class="section-header">
+                    <h1 class="section-title">
+                        Learn something new everyday
+                    </h1>
+                    <p>
+                        Via pithily stopped one this until rode salmon incompetent much bawled gosh experimentally considering much the however armadillo jeez or ouch the one when wow some tonelessly jeez gull while grizzly like burst cardinal athletically.
+
+                    </p>
+                    <p>
+                        &nbsp;
+                    </p>
+                    <p>
+                        &nbsp;
+                    </p>
+                    <p>
+                        <strong>
+                            Emanuel, Sr Strategist at Hiring.com
+                        </strong>
+                    </p>
+                </div>
+
+            </div>
+            <div class="content-text cards">
+                <div class="card">
+                    <figure id="card1" class="card-image">
+                        <!--<img src="./resources/images/information-orientation.jpg" alt="Information Orientation" />-->
+                    </figure>
+                    <div class="card-info">
+                        <div class="card-header">
+                            <h2>Orientation date</h2>
+                            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+                        </div>
+                        <a class="read-more" href="#">Read more</a>
+                    </div>
+
+                </div>
+                <div class="card">
+                    <figure id="card2" class="card-image">
+                        <!--<img src="./resources/images/information-campus-mobile.jpg" alt="Information Campus Mobile" />-->
+                    </figure>
+                    <div class="card-info">
+                        <div class="card-header">
+                            <h2>Our campus</h2>
+                            <p>Find which campus is close by you</p>
+                        </div>
+                        <a class="read-more" href="#">Read more</a>
+                    </div>
+
+                </div>
+                <div class="card selected">
+                    <figure id="card3" class="card-image">
+                        <!--<img src="./resources/images/information-guest-lecture.jpg" alt="Information Guest Lecturer" />-->
+                    </figure>
+                    <div class="card-info">
+                        <div class="card-header">
+                            <h2>Our Gues lecture</h2>
+                            <p>Join a keynote with Oliver Sack About music in medical treatment</p>
+                        </div>
+                        <a class="read-more" href="#">Read more</a>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+
     </div>
 </body>
 </html>
