Final updates to sections and mobile

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         Learn something new everyday
                     </h1>
                     <h2 class="section-subtitle">
-                        Lorem ipsum dolor sit amet, consectetur adispcing elit.
+                        Lorem ipsum dolor sit amet, consectetur adispcing elit. <br /><br />
                     </h2>
                     <button>Start here</button>
                 </div>
@@ -91,7 +91,8 @@
             <div class="content-text cards">
                 <div class="card">
                     <figure id="card1" class="card-image">
-                        <!--<img src="./resources/images/information-orientation.jpg" alt="Information Orientation" />-->
+                        <img class="image" src="./resources/images/information-orientation.jpg" alt="Information Orientation" />
+                        <img class="mobile-image" src="./resources/images/information-orientation-mobile.jpg" alt="Information Orientation Mobile" />
                     </figure>
                     <div class="card-info">
                         <div class="card-header">
@@ -103,8 +104,9 @@
 
                 </div>
                 <div class="card">
-                    <figure id="card2"  class="card-image">
-                        <!--<img src="./resources/images/information-campus-mobile.jpg" alt="Information Campus Mobile" />-->
+                    <figure id="card2" class="card-image">
+                        <img class="image" src="./resources/images/information-campus.jpg" alt="Information Campus" />
+                        <img class="mobile-image" src="./resources/images/information-campus-mobile.jpg" alt="Information Campus Mobile" />
                     </figure>
                     <div class="card-info">
                         <div class="card-header">
@@ -117,7 +119,8 @@
                 </div>
                 <div class="card selected">
                     <figure id="card3" class="card-image">
-                        <!--<img src="./resources/images/information-guest-lecture.jpg" alt="Information Guest Lecturer" />-->
+                        <img class="image" src="./resources/images/information-guest-lecture.jpg" alt="Information Guest Lecturer" />
+                        <img class="mobile-image" src="./resources/images/information-guest-lecture-mobile.jpg" alt="Information Guest Lecturer Mobile" />
                     </figure>
                     <div class="card-info">
                         <div class="card-header">
@@ -131,7 +134,7 @@
             </div>
 
         </section>
-        
+
         <section class="landing-page">
             <div class="section-header">
                 <h1 class="section-title">Start learning</h1>
@@ -139,7 +142,7 @@
             <div class="landing-wrap">
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img src="./resources/images/course-software.jpg" alt="Sofware Engineering"/>
+                        <img src="./resources/images/course-software.jpg" alt="Sofware Engineering" />
                     </figure>
                     <div class="feature-info">
                         <h2>Software engineering</h2>
@@ -149,7 +152,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img  src="./resources/images/course-computer-art.jpg" alt="Computer Art"/>
+                        <img src="./resources/images/course-computer-art.jpg" alt="Computer Art" />
                     </figure>
                     <div class="feature-info">
                         <h2>Computer art</h2>
@@ -159,7 +162,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img src="./resources/images/course-design.jpg" alt="Design"/>
+                        <img src="./resources/images/course-design.jpg" alt="Design" />
                     </figure>
                     <div class="feature-info">
                         <h2>Design</h2>
@@ -169,7 +172,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img  src="./resources/images/course-data.jpg" alt="Data"/>
+                        <img src="./resources/images/course-data.jpg" alt="Data" />
                     </figure>
                     <div class="feature-info">
                         <h2>Data</h2>
@@ -179,7 +182,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img  src="./resources/images/course-business.jpg" alt="Business Courses"/>
+                        <img src="./resources/images/course-business.jpg" alt="Business Courses" />
                     </figure>
                     <div class="feature-info">
                         <h2>Business</h2>
@@ -189,7 +192,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img  src="./resources/images/course-marketing.jpg" alt="Marketing Courses"/>
+                        <img src="./resources/images/course-marketing.jpg" alt="Marketing Courses" />
                     </figure>
                     <div class="feature-info">
                         <h2>Marketing</h2>
@@ -200,79 +203,69 @@
             </div>
         </section>
 
-        <section class="jumbotron white">
-            <div class="content-media">
-                <figure class="figure-image">
-                    <div class="section-image">
-                        <img class="resource-image" src="./resources/images/information-main.jpg" />
-                    </div>
-                </figure>
-                <div class="section-header">
-                    <h1 class="section-title">
-                        Learn something new everyday
-                    </h1>
-                    <p>
-                        Via pithily stopped one this until rode salmon incompetent much bawled gosh experimentally considering much the however armadillo jeez or ouch the one when wow some tonelessly jeez gull while grizzly like burst cardinal athletically.
-
-                    </p>
-                    <p>
-                        &nbsp;
-                    </p>
-                    <p>
-                        &nbsp;
-                    </p>
-                    <p>
-                        <strong>
-                            Emanuel, Sr Strategist at Hiring.com
-                        </strong>
-                    </p>
-                </div>
-
+        <section class="layout-2">
+            <div class="section-header top">
+                <h1 class="section-title">
+                    Thesis exhibit
+                </h1>
             </div>
-            <div class="content-text cards">
-                <div class="card">
-                    <figure id="card1" class="card-image">
-                        <!--<img src="./resources/images/information-orientation.jpg" alt="Information Orientation" />-->
-                    </figure>
-                    <div class="card-info">
-                        <div class="card-header">
-                            <h2>Orientation date</h2>
-                            <p>Tue 10/11 &amp; Wed 10/12: 8am-3pm</p>
+            <div class="jumbotron white">
+                <div class="content-media video">
+                    <figure class="figure-video">
+                        <div class="section-video">
+                            <!--<img class="resource-image" src="./resources/images/information-main.jpg" />-->
+                            <video controls width="1920" height="1080">
+                                <source src="./resources/videos/thesis.mp4" type="video/mp4">
+                                Your browser does not support HTML5 video.
+                            </video>
                         </div>
-                        <a class="read-more" href="#">Read more</a>
+                    </figure>
+                    <div class="section-header">
+                        <h1 class="section-title">
+                            Reimagine urban
+                        </h1>
+                        <p>
+                            Via pithily stopped one this until rode salmon incompetent much bawled gosh experimentally considering much the however armadillo jeez or ouch the one when wow some tonelessly jeez gull while grizzly like burst cardinal athletically.
+                        </p>
                     </div>
-
                 </div>
-                <div class="card">
-                    <figure id="card2" class="card-image">
-                        <!--<img src="./resources/images/information-campus-mobile.jpg" alt="Information Campus Mobile" />-->
-                    </figure>
-                    <div class="card-info">
-                        <div class="card-header">
-                            <h2>Our campus</h2>
-                            <p>Find which campus is close by you</p>
+                <div class="content-text cards" style="border-left:none">
+                    <div class="card selected">
+                        <figure id="card4" class="card-image">
+                            <img src="./resources/images/thesis-fisma.jpg" alt="Thesis Fisma" />
+                        </figure>
+                        <div class="card-info">
+                            <div class="card-header">
+                                <h2>Fisma: Design</h2>
+                                <p>Designer showcase of new prototype</p>
+                            </div>
+                            <a class="read-more" href="#">Read more</a>
                         </div>
-                        <a class="read-more" href="#">Read more</a>
-                    </div>
 
-                </div>
-                <div class="card selected">
-                    <figure id="card3" class="card-image">
-                        <!--<img src="./resources/images/information-guest-lecture.jpg" alt="Information Guest Lecturer" />-->
-                    </figure>
-                    <div class="card-info">
-                        <div class="card-header">
-                            <h2>Our Gues lecture</h2>
-                            <p>Join a keynote with Oliver Sack About music in medical treatment</p>
+                    </div>
+                    <div class="card">
+                        <figure id="card5" class="card-image">
+                            <img src="./resources/images/thesis-now-and-then.jpg" alt="Thesis Now and Then" />
+                        </figure>
+                        <div class="card-info">
+                            <div class="card-header">
+                                <h2>Now and then</h2>
+                                <p>Research study about New York</p>
+                            </div>
+                            <a class="read-more" href="#">Read more</a>
                         </div>
-                        <a class="read-more" href="#">Read more</a>
-                    </div>
 
+                    </div>
                 </div>
             </div>
-
         </section>
+        <footer>
+            <p>&copy; 2016 Colmar Academy. All rights reserved</p>
 
+            <a href="#">Privacy</a>&nbsp;&nbsp;
+            <a href="#">Terms</a>
+
+        </footer>
     </div>
 </body>
 </html>
