Updates to include Accessibility tags

--- a/index.html
+++ b/index.html
@@ -10,29 +10,29 @@
         <nav class="main">
             <div class="logo">
                 <a href="/" target="_self">
-                    <img class="logo-image" src="./resources/images/ic-logo.svg" />
+                    <img class="logo-image" src="./resources/images/ic-logo.svg" alt="Company Logo" />
                     <h1>Colmar<span>Academy</span></h1>
                 </a>
             </div>
-            <div class="links">
+            <div class="links" role="presentation">
                 <a href="#" target="_self"><span>On campus</span></a>
                 <a href="#" target="_self"><span>Online</span></a>
                 <a href="#" target="_self"><span>Our Companies</span></a>
                 <a href="#" target="_self"><span>Sign In</span></a>
             </div>
         </nav>
-        <nav class="mobile">
+        <nav class="mobile" role="presentation">
             <a href="/" target="_self">
-                <img class="logo-image" src="./resources/images/ic-logo.svg" />
+                <img class="logo-image" src="./resources/images/ic-logo.svg" alt="Company logo" />
             </a>
             <a href="#" target="_self">
                 <img class="icon" src="./resources/images/ic-on-campus.svg" alt="On campus logo" />
             </a>
             <a href="#" target="_self">
-                <img class="icon" src="./resources/images/ic-online.svg" alt="On campus logo" />
+                <img class="icon" src="./resources/images/ic-online.svg" alt="Online logo" />
             </a>
             <a href="#" target="_self">
-                <img class="icon" src="./resources/images/ic-login.svg" alt="Sign in img" />
+                <img class="icon" src="./resources/images/ic-login.svg" alt="Sign in" />
             </a>
         </nav>
     </header>
@@ -41,7 +41,7 @@
             <div class="content-media">
                 <figure class="figure-image">
                     <div class="section-image">
-                        <img class="resource-image" src="./resources/images/banner.jpg" />
+                        <img class="resource-image" src="./resources/images/banner.jpg" alt="Banner"/>
                     </div>
                 </figure>
             </div>
@@ -63,7 +63,7 @@
             <div class="content-media">
                 <figure class="figure-image">
                     <div class="section-image">
-                        <img class="resource-image" src="./resources/images/information-main.jpg" />
+                        <img class="resource-image" src="./resources/images/information-main.jpg" alt="Information header"/>
                     </div>
                 </figure>
                 <div class="section-header">
@@ -162,7 +162,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img src="./resources/images/course-design.jpg" alt="Design" />
+                        <img src="./resources/images/course-design.jpg" alt="Course Design" />
                     </figure>
                     <div class="feature-info">
                         <h2>Design</h2>
@@ -172,7 +172,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img src="./resources/images/course-data.jpg" alt="Data" />
+                        <img src="./resources/images/course-data.jpg" alt="Course Data" />
                     </figure>
                     <div class="feature-info">
                         <h2>Data</h2>
@@ -182,7 +182,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img src="./resources/images/course-business.jpg" alt="Business Courses" />
+                        <img src="./resources/images/course-business.jpg" alt="Courses Business" />
                     </figure>
                     <div class="feature-info">
                         <h2>Business</h2>
@@ -192,7 +192,7 @@
                 </div>
                 <div class="one-third">
                     <figure class="feature-image">
-                        <img src="./resources/images/course-marketing.jpg" alt="Marketing Courses" />
+                        <img src="./resources/images/course-marketing.jpg" alt="Course Marketing " />
                     </figure>
                     <div class="feature-info">
                         <h2>Marketing</h2>
@@ -214,7 +214,7 @@
                     <figure class="figure-video">
                         <div class="section-video">
                             <!--<img class="resource-image" src="./resources/images/information-main.jpg" />-->
-                            <video controls width="1920" height="1080">
+                            <video controls width="1920" height="1080" aria-label="Thesis video">
                                 <source src="./resources/videos/thesis.mp4" type="video/mp4">
                                 Your browser does not support HTML5 video.
                             </video>
